# MyCPPTemplate

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  script.sh
